--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
+file.reference.jess.jar=/home/edgar-pc/Jess71p2/lib/jsr94.jar
+file.reference.jsr94.jar=/home/edgar-pc/Jess71p2/lib
 user.properties.file=/home/edgar-pc/.netbeans/8.1/build.properties
