--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jess.jar=../../proyecto_IA/Jess71p2/lib/jess.jar
 file.reference.jsr94.jar=../../proyecto_IA/Jess71p2/lib/jsr94.jar
+file.reference.postgresql-9.4.1212.jar=C:\\Users\\Sixto Castro\\Downloads\\postgresql-9.4.1212.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jess.jar}:\
-    ${file.reference.jsr94.jar}
+    ${file.reference.jsr94.jar}:\
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.postgresql-9.4.1212.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
