Autocomplete para materias

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/IA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.AutoCompleter.jar=..\\..\\..\\Downloads\\AutoCompleter.jar
 file.reference.jess.jar=../../proyecto_IA/Jess71p2/lib/jess.jar
 file.reference.jsr94.jar=../../proyecto_IA/Jess71p2/lib/jsr94.jar
 file.reference.postgresql-9.4.1212.jar=C:\\Users\\Sixto Castro\\Downloads\\postgresql-9.4.1212.jar
@@ -36,7 +37,8 @@ javac.classpath=\
     ${file.reference.jess.jar}:\
     ${file.reference.jsr94.jar}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.postgresql-9.4.1212.jar}
+    ${file.reference.postgresql-9.4.1212.jar}:\
+    ${file.reference.AutoCompleter.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
