Validaciones en diferentes Pantallas (campos y popup materia nueva)

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,6 @@
 compile.on.save=true
-file.reference.jess.jar=C:\\Users\\emele_000\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jess.jar
-file.reference.jsr94.jar=C:\\Users\\emele_000\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jsr94.jar
-file.reference.postgresql-9.4.1212.jar=C:\\Users\\emele_000\\Documents\\soravi_jar2\\soravi_jar2\\lib\\postgresql-9.4-1201-jdbc4.jar
-user.properties.file=C:\\Users\\emele_000\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Sixto Castro\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
