--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=IA
+application.vendor=Sixto Castro
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,19 +27,18 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/IA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.AutoCompleter.jar=..\\..\\..\\Downloads\\AutoCompleter.jar
-file.reference.jess.jar=../../proyecto_IA/Jess71p2/lib/jess.jar
-file.reference.jsr94.jar=../../proyecto_IA/Jess71p2/lib/jsr94.jar
-file.reference.postgresql-9.4.1212.jar=C:\\Users\\Sixto Castro\\Downloads\\postgresql-9.4.1212.jar
+file.reference.jess.jar-1=C:\\Users\\Sixto Castro\\Documents\\jess.jar
+file.reference.jsr94.jar-1=C:\\Users\\Sixto Castro\\Documents\\jsr94.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jess.jar}:\
-    ${file.reference.jsr94.jar}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.postgresql-9.4.1212.jar}:\
-    ${file.reference.AutoCompleter.jar}
+    ${file.reference.AutoCompleter.jar}:\
+    ${file.reference.jess.jar-1}:\
+    ${file.reference.jsr94.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
