--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AutoCompleter.jar=..\\..\\..\\Downloads\\AutoCompleter.jar
+file.reference.jess.jar=..\\..\\..\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jess.jar
 file.reference.jess.jar-1=C:\\Users\\Sixto Castro\\Documents\\jess.jar
+file.reference.jsr94.jar=..\\..\\..\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jsr94.jar
 file.reference.jsr94.jar-1=C:\\Users\\Sixto Castro\\Documents\\jsr94.jar
 includes=**
 jar.compress=false
@@ -38,7 +40,9 @@ javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.AutoCompleter.jar}:\
     ${file.reference.jess.jar-1}:\
-    ${file.reference.jsr94.jar-1}
+    ${file.reference.jsr94.jar-1}:\
+    ${file.reference.jsr94.jar}:\
+    ${file.reference.jess.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
