pantalla de experto que permitira editar datos de las materias

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ file.reference.jess.jar-1=C:\\Users\\emele_000\\Documents\\soravi_jar2\\soravi_j
 file.reference.jsr94.jar-1=C:\\Users\\emele_000\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jsr94.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\emele_000\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=/home/edgar-pc/.netbeans/8.1/build.properties
