--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AutoCompleter.jar=..\\..\\..\\Downloads\\AutoCompleter.jar
+file.reference.AutoCompleter.jar-1=../AutoCompleter.jar
 file.reference.jess.jar=..\\..\\..\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jess.jar
 file.reference.jess.jar-1=C:\\Users\\Sixto Castro\\Documents\\jess.jar
+file.reference.jess.jar-2=../jess.jar
 file.reference.jsr94.jar=..\\..\\..\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jsr94.jar
 file.reference.jsr94.jar-1=C:\\Users\\Sixto Castro\\Documents\\jsr94.jar
+file.reference.jsr94.jar-2=../jsr94.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -42,7 +45,10 @@ javac.classpath=\
     ${file.reference.jess.jar-1}:\
     ${file.reference.jsr94.jar-1}:\
     ${file.reference.jsr94.jar}:\
-    ${file.reference.jess.jar}
+    ${file.reference.jess.jar}:\
+    ${file.reference.AutoCompleter.jar-1}:\
+    ${file.reference.jess.jar-2}:\
+    ${file.reference.jsr94.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
