Listado de materias recomendadas x tipo(Resultados)

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,6 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.jess.jar-1=C:\\Users\\emele_000\\Documents\\soravi_jar2\\soravi_jar2\\lib\\postgresql-9.4-1201-jdbc4.jar
-file.reference.jsr94.jar-1=C:\\Users\\emele_000\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jsr94.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/edgar-pc/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\Sixto Castro\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
