--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,26 +29,18 @@ dist.jar=${dist.dir}/IA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.AutoCompleter.jar=..\\..\\..\\Downloads\\AutoCompleter.jar
-file.reference.AutoCompleter.jar-1=../AutoCompleter.jar
-file.reference.jess.jar=..\\..\\..\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jess.jar
-file.reference.jess.jar-1=C:\\Users\\Sixto Castro\\Documents\\jess.jar
-file.reference.jess.jar-2=../jess.jar
-file.reference.jsr94.jar=..\\..\\..\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jsr94.jar
-file.reference.jsr94.jar-1=C:\\Users\\Sixto Castro\\Documents\\jsr94.jar
-file.reference.jsr94.jar-2=../jsr94.jar
+file.reference.AutoCompleter.jar=C:\\Users\\Sixto Castro\\Downloads\\AutoCompleter.jar
+file.reference.jess.jar=C:\\Users\\Sixto Castro\\Documents\\jess.jar
+file.reference.jsr94.jar=C:\\Users\\Sixto Castro\\Documents\\jsr94.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.AutoCompleter.jar}:\
-    ${file.reference.jess.jar-1}:\
-    ${file.reference.jsr94.jar-1}:\
-    ${file.reference.jsr94.jar}:\
+    ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.jess.jar}:\
-    ${file.reference.AutoCompleter.jar-1}:\
-    ${file.reference.jess.jar-2}:\
-    ${file.reference.jsr94.jar-2}
+    ${file.reference.jsr94.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +65,24 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=ia.IA
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
