modifcacion de pantalla de experto e ingreso de dificultad con promedio en decimales

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AutoCompleter.jar=C:\\Users\\Sixto Castro\\Downloads\\AutoCompleter.jar
+file.reference.AutoCompleter.jar-1=../../AutoCompleter.jar
 file.reference.jess.jar=C:\\Users\\Sixto Castro\\Documents\\jess.jar
+file.reference.jess.jar-1=../../jess.jar
 file.reference.jsr94.jar=C:\\Users\\Sixto Castro\\Documents\\jsr94.jar
+file.reference.jsr94.jar-1=../../jsr94.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -40,7 +43,10 @@ javac.classpath=\
     ${file.reference.AutoCompleter.jar}:\
     ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.jess.jar}:\
-    ${file.reference.jsr94.jar}
+    ${file.reference.jsr94.jar}:\
+    ${file.reference.AutoCompleter.jar-1}:\
+    ${file.reference.jess.jar-1}:\
+    ${file.reference.jsr94.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
