--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,12 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.AutoCompleter.jar=C:\\Users\\emele_000\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jess.jar
+file.reference.AutoCompleter.jar-1=C:\\Users\\emele_000\\Downloads\\AutoCompleter.jar
+file.reference.jess.jar=C:\\Users\\emele_000\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jess.jar
+file.reference.jess.jar-1=C:\\Users\\emele_000\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jess.jar
+file.reference.jsr94.jar=C:\\Users\\emele_000\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jsr94.jar
+file.reference.jsr94.jar-1=C:\\Users\\emele_000\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jsr94.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/edgar-pc/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\emele_000\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
