--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,24 +29,17 @@ dist.jar=${dist.dir}/IA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.AutoCompleter.jar=C:\\Users\\Sixto Castro\\Downloads\\AutoCompleter.jar
-file.reference.AutoCompleter.jar-1=../../AutoCompleter.jar
 file.reference.jess.jar=C:\\Users\\Sixto Castro\\Documents\\jess.jar
-file.reference.jess.jar-1=../../jess.jar
-file.reference.jsr94.jar=C:\\Users\\Sixto Castro\\Documents\\jsr94.jar
 file.reference.jsr94.jar-1=../../jsr94.jar
+file.reference.postgresql-9.4-1201-jdbc4.jar=..\\..\\soravi_jar2\\soravi_jar2\\lib\\postgresql-9.4-1201-jdbc4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.AutoCompleter.jar}:\
-    ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.jess.jar}:\
-    ${file.reference.jsr94.jar}:\
-    ${file.reference.AutoCompleter.jar-1}:\
-    ${file.reference.jess.jar-1}:\
-    ${file.reference.jsr94.jar-1}
+    ${file.reference.jsr94.jar-1}:\
+    ${file.reference.postgresql-9.4-1201-jdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
