Validaciones en recalculo de dificultad materia, y materias nuevas ingresadas

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=postgres 8326653669a
+application.args=postgres awesome6
 compile.on.save=true
 do.depend=false
 do.jar=true
@@ -6,4 +6,4 @@ file.reference.jess.jar=C:\\Users\\emele_000\\Downloads\\java-jess\\ZooOff_netbe
 file.reference.jsr94.jar-1=C:\\Users\\emele_000\\Downloads\\java-jess\\ZooOff_netbeans\\ZooOff\\lib\\jsr94.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\emele_000\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=C:\\Users\\sixto castro\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
