--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,10 @@ dist.jar=${dist.dir}/IA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AutoCompleter.jar=C:\\Users\\sixto castro\\Documents\\lib_IA\\AutoCompleter.jar
 file.reference.jess.jar=C:\\Users\\Sixto Castro\\Documents\\jess.jar
+file.reference.jess.jar-1=C:\\Users\\sixto castro\\Documents\\lib_IA\\jess.jar
+file.reference.jsr94.jar=C:\\Users\\sixto castro\\Documents\\lib_IA\\jsr94.jar
 file.reference.jsr94.jar-1=../../jsr94.jar
 file.reference.postgresql-9.4-1201-jdbc4.jar=..\\..\\soravi_jar2\\soravi_jar2\\lib\\postgresql-9.4-1201-jdbc4.jar
 includes=**
@@ -39,7 +42,11 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.jess.jar}:\
     ${file.reference.jsr94.jar-1}:\
-    ${file.reference.postgresql-9.4-1201-jdbc4.jar}
+    ${file.reference.postgresql-9.4-1201-jdbc4.jar}:\
+    ${file.reference.AutoCompleter.jar}:\
+    ${file.reference.jess.jar-1}:\
+    ${file.reference.jsr94.jar}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
